--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -3,28 +3,33 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-# main:
-  # - name: Home
-  #   url: '#about'
-  #   weight: 10
+main:
+  - name: Home
+    url: '#about'
+    weight: 10
   # - name: Posts
   #   url: '#posts'
   #   weight: 20
-  # - name: Projects
-  #   url: '#projects'
-  #   weight: 30
+  - name: Projects
+    url: '#projects'
+    weight: 30
   # - name: Talks
   #   url: '#talks'
   #   weight: 40
+  # - name: Accomplish­ments
+  #   url: '#accomplishments'
+  #   weight: 45
   # - name: Publications
   #   url: '#featured'
   #   weight: 50
-  # - name: Contact
-  #   url: '#contact'
-  #   weight: 60
+  - name: Contact
+    url: '#contact'
+    weight: 60
 
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+  # - name: CV
+  #   icon: cv
+  #   icon_pack: ai
+  #   link: media/cv-short.pdf
+  #   weight: 70
+  # Link to a PDF of your resume/CV from the menu.
+  # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
